--- a/gru_manual.html
+++ b/gru_manual.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+<title>Insert title here</title>
+</head>
+<body>
 <iframe src="https://onedrive.live.com/embed?cid=AC0720A35C277E9F&resid=AC0720A35C277E9F%21452&authkey=ADAyO28W1ZzSRyM&em=2" width="476" height="288" frameborder="0" scrolling="no"></iframe>
+</body>
+</html>
+
+
